[package]
edition = "2021"
name = "vag"
version = "0.1.0"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

[dependencies]
eip55 = "0.4"
bip0039 = "0.11"
clap = {version = "4", features = ["derive"]}
hex = "0.4"
libsecp256k1 = "0.7"
num_cpus = "1"
tiny-hderive = "0.3"
tiny-keccak = {version = "2", features = ['keccak']}
regex = "1"
